--- a/phase2-servlet/pom.xml
+++ b/phase2-servlet/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>com.helger.phase2</groupId>
     <artifactId>phase2-parent-pom</artifactId>
-    <version>6.1.0</version>
+    <version>6.1.1-SNAPSHOT</version>
   </parent>
   <artifactId>phase2-servlet</artifactId>
   <packaging>bundle</packaging>
