--- a/phase2-demo-webapp/pom.xml
+++ b/phase2-demo-webapp/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>com.helger.phase2</groupId>
     <artifactId>phase2-parent-pom</artifactId>
-    <version>6.1.1</version>
+    <version>6.1.2-SNAPSHOT</version>
   </parent>
   <artifactId>phase2-demo-webapp</artifactId>
   <packaging>war</packaging>
