--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
   </parent>
   <groupId>com.helger.phase2</groupId>
   <artifactId>phase2-parent-pom</artifactId>
-  <version>6.1.1</version>
+  <version>6.1.2-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>phase2-parent-pom</name>
   <description>Base POM to build the phase2 projects</description>
@@ -50,7 +50,7 @@
     <connection>scm:git:https://github.com/phax/phase2.git</connection>
     <developerConnection>scm:git:https://github.com/phax/phase2.git</developerConnection>
     <url>https://github.com/phax/phase2</url>
-    <tag>phase2-parent-pom-6.1.1</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <organization>
